{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "OnFeet",
            "id": "a028c224-2871-4991-8ae5-e728be6e5570",
            "actions": [
                {
                    "name": "LeftAttack",
                    "type": "Button",
                    "id": "271deb47-323e-4966-9a54-2ef49fc9cbfc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightAttack",
                    "type": "Button",
                    "id": "3de68d07-fde2-46f3-bc40-3981f005ac66",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "984d990a-165e-48ee-b45f-6c5dd236daa4",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60bab144-5a0b-471f-922e-65f261a873b2",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}